# fly-fastapi-template

./: app.py  pyproject.toml
