[tool.poetry]
name = "poetry-fastapi"
version = "0.1.0"
description = ""
authors = ["Donatas Rasiukevicius <donatas@fly.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.111"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
bpython = "^0.24"
pdbpp = "^0.10.3"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
